Ensure QModbusDevice::close() handles being unconnected already

Prior to this change, an unconnected device would transition into the Closing
state if disconnectDevice() was called. Since the transition to Unconnected is
bound to sockets being closed the already unconnected ModbusDevice would
forever hang in CLosing.

Task-number: QTBUG-66648
Change-Id: Ia439f6b63b7d4ab7f377a45fb09cb5f5b99627f7
Reviewed-by: André Hartmann <aha_1980@gmx.de>
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>